# vision-walker

./: .gitignore  1.txt  10.txt  11.txt  12.txt  13.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt  CMakeLists.txt  README.md  VisionWalker.cpp  VisionWalker.h  analysis.py  analysis2.py  answers.txt  answersOld.txt  cmake_install.cmake  create_test.py  detect2.py  detection.py  haptics.py  kinect.py  kinect2.py  kinect3.py  requirements.txt  settings.py  test2.tiff  test_detect.py  vision_walker.cpp
DepthImages/: README.md  actual_haptic.py  config.py  create_test.py  detect2.py  detection.py  example_buzzer.py  kinect.py  kinect2.py  obstacle_detection.py  run_tests.py  test_haptics.py
PointClouds/: README.md  VisionWalker.cpp
segmentation/: detection.py  haptics.py  requirements.txt  test_detect.py
