cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(VisionWalker)
find_package(PCL 1.6 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
list(REMOVE_ITEM PCL_LIBRARIES "vtkproj4")
add_executable(VisionWalker VisionWalker.cpp)
target_link_libraries(VisionWalker ${PCL_LIBRARIES})